Spacing fix on index

--- a/public/style.css
+++ b/public/style.css
@@ -136,9 +136,6 @@ button:hover {
     h1 {
         font-size: 25px;
     }
-    p {
-        font-size: 18px;
-    }
 }
 
 @media (max-width: 344px) {
@@ -151,10 +148,7 @@ button:hover {
     }
     h1 {
         font-size: 15px;
-    }
-    p {
-        font-size: 13px;
-    }    
+    }  
 }
 
 .container {
